--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.3",
     "@supabase/supabase-js": "^2.50.2",
     "cors": "^2.8.5",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
