--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.3",
     "@supabase/supabase-js": "^2.50.2",
     "cors": "^2.8.5",
     "express-rate-limit": "^7.5.1",
@@ -13,5 +14,12 @@
   },
   "devDependencies": {
     "@types/express-rate-limit": "^5.1.3"
+  },
+  "scripts": {
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main"
   }
 }
