--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "stripe": "^18.2.1"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.7",
     "@types/express-rate-limit": "^5.1.3"
   },
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main"
+    "start:prod": "npm run build && node dist/main.js"
   },
   "engines": {
     "node": "18"
